--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.conteiner {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 1000px;
+  height: 1000px;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.conteiner .conteiner__playing-field {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.conteiner .conteiner__playing-field div {
+  border: 1px solid;
+}
+
+.conteiner .conteiner__playing-field div img {
+  width: 100%;
+  height: 100%;
+}
+
+.conteiner .conteiner__playing-field div:hover {
+  background-color: rgba(0, 128, 0, 0.562);
 }
