--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   width: 1000px;
   height: 1000px;
   margin: auto;
+  position: relative;
 }
 
 .conteiner .conteiner__playing-field {
@@ -30,4 +31,17 @@
 
 .conteiner .conteiner__playing-field div:hover {
   background-color: rgba(0, 128, 0, 0.562);
+}
+
+.conteiner .resultMenu {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 50px;
+  background-color: rgba(0, 0, 255, 0.863);
+  font-weight: bold;
 }
