--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
     width: 1000px;
     height: 1000px;
     margin: auto;
+    position: relative;
 
     .conteiner__playing-field {
         display: flex;
@@ -27,5 +28,17 @@
             background-color: rgba(0, 128, 0, 0.562);
         }
     }
-    
+    .resultMenu {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 50px;
+        background-color: rgba(0, 0, 255, 0.863);
+        font-weight: bold;
+    }
 }
