--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
 .conteiner {
   display: flex;
   flex-direction: column;
-  width: 1000px;
-  height: 1000px;
   margin: auto;
   position: relative;
 }
@@ -21,6 +19,7 @@
 }
 
 .conteiner .conteiner__playing-field div {
+  display: flex;
   border: 1px solid;
 }
 
