--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,6 @@
 .conteiner {
     display: flex;
     flex-direction: column;
-    width: 1000px;
-    height: 1000px;
     margin: auto;
     position: relative;
 
@@ -18,6 +16,7 @@
         width: 100%;
         height: 100%;
         div {
+            display: flex;
             border: 1px solid;
             img {
                 width: 100%;
