--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,24 @@
 .conteiner {
     display: flex;
     flex-direction: column;
-
     margin: auto;
     position: relative;
+    justify-content: center;
+    div {
+        width: 100%;
+        p {
+            font-weight: 500;
+            margin: 0;
+        }
+        button {
+            margin: 2px;
+        }
+    }
+
+    .btn:focus,
+    .btn:active {
+        box-shadow: none !important;
+    }
 
     .conteiner__playing-field {
         display: flex;
@@ -28,17 +43,20 @@
             background-color: rgba(0, 128, 0, 0.562);
         }
     }
-    .resultMenu {
+    .conteiner__resultMenu {
         position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
-
         top: 50%;
         left: 50%;
         transform: translateX(-50%);
         padding: 50px;
         background-color: rgba(0, 0, 255, 0.863);
         font-weight: bold;
+        width: auto;
+    }
+    .conteiner__menu {
+        display: flex;
     }
 }
