--- a/src/App.css
+++ b/src/App.css
@@ -56,15 +56,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  padding: 5px;
+  width: auto;
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
-  padding: 50px;
   background-color: rgba(0, 0, 255, 0.863);
   font-weight: bold;
-  width: auto;
+}
+
+.conteiner .hidden {
+  display: none;
 }
 
 .conteiner .conteiner__menu {
   display: flex;
+}
+
+.conteiner .conteiner__text {
+  padding: 20px 0;
 }
